# hydro-logger-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
docs/: api_contracts.md  architecture.md  command.md  requirements.md  state_machines.md
docs/lib/: pcf8563.cpp
docs/test_case/: README.md
main/: CMakeLists.txt  CMakeLists.txt.t
main/app/: app_context.hpp  app_main.cpp  app_state.hpp  config_console.cpp  diagnostic_task.cpp  failover_task.cpp  failover_task.hpp  measure_task.cpp  notify_task.cpp  ota_task.cpp  scheduler_task.cpp  sync_task.cpp
main/board/: adc_drv.cpp  adc_drv.hpp  gpio_drv.cpp  gpio_drv.hpp  i2c_drv.cpp  i2c_drv.hpp  i2c_port.cpp  i2c_port.h  pins.hpp  uart_drv.cpp  uart_drv.hpp
main/common/: config.hpp  nvs_store.cpp  nvs_store.hpp  result.hpp  singleton.hpp  time_utils.cpp  time_utils.hpp
main/component_test/: CMakeLists.txt  test_dcom.cpp  test_i2c.cpp  test_main.cpp  test_post_api.cpp  test_rtc.cpp  test_sensor.cpp  test_sim.cpp  test_timesync.cpp
main/middleware/: data_models.hpp  message_bus.cpp  message_bus.hpp  persistent_queue_mirror.hpp  publish_api.cpp  publish_api.hpp
main/modules/io/: io_controller.cpp  io_controller.hpp
main/modules/rtc/: pcf8563.cpp  pcf8563.h  rtc_base.hpp  rtc_ds1307.cpp  rtc_ds1307.hpp  rtc_pcf8563.cpp  rtc_pcf8563.hpp
main/modules/sensor/: laser_sensor.cpp  laser_sensor.hpp  pressure_sensor.cpp  pressure_sensor.hpp  sensor.hpp  sensor_manager.cpp  sensor_manager.hpp  ultrasonic_sensor.cpp  ultrasonic_sensor.hpp
main/services/connectivity/: comm_module.hpp  connectivity_manager.cpp  connectivity_manager.hpp  dcom_module.cpp  dcom_module.hpp  sim4g_module.cpp  sim4g_module.hpp
main/services/logging/: log_buffer.cpp  log_buffer.hpp  log_service.cpp  log_service.hpp
main/services/net/: http_client.cpp  http_client.hpp  server_api.cpp  server_api.hpp
main/services/ota/: ota_service.cpp  ota_service.hpp
main/services/pack/: json_packer.cpp  json_packer.hpp
main/services/portal/: boot_portal.cpp  boot_portal.hpp
main/services/power/: power_manager.cpp  power_manager.hpp
test/: test_connectivity_failover.cpp  test_log_buffer.cpp  test_sensor_failover.cpp
test/component_test/: CMakeLists.txt  project_CMakeLists.txt  test_adc.cpp  test_common.hpp  test_dcom.cpp  test_gpio.cpp  test_main.cpp  test_ota.cpp  test_post_api.cpp  test_sensor.cpp  test_sim.cpp
